[package]
name = "monlomon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.152",features = ["derive"]}
serde_json = "1.0"
tui = "0.19"
crossterm = "0.25"
colored_json = "3.0.1"